<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cs="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cshawn.commonviews.RoundCornerTextViewActivity">
    <com.cshawn.commonviewslib.roundcorner.RoundCornerTextView
        android:id="@+id/rctv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RoundCornerTextView"
        android:padding="10dp"
        android:textSize="20sp"
        android:clickable="true"
        cs:solidColor="@color/solid_color_selector"
        cs:strokeWidth="5dp"
        cs:strokeColor="@color/stroke_color_selector"
        cs:selfRadius="30dp"
        cs:radius_right_top="100dp"
        cs:radius_right_bottom="0dp"
        cs:selfRoundCorner="false"
        cs:shape="rectangle"
        cs:backgroundFitType="inside"
        cs:scaleType="fitXY"
        />
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strokeWidth"/>
            <EditText
                android:id="@+id/et_stroke_width"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radius"/>
            <EditText
                android:id="@+id/et_radius"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radius_left_top"/>
                <EditText
                    android:id="@+id/et_r_l_t"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radius_right_top"/>
                <EditText
                    android:id="@+id/et_r_r_t"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radius_left_bottom"/>
                <EditText
                    android:id="@+id/et_r_l_b"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radius_right_bottom"/>
                <EditText
                    android:id="@+id/et_r_r_b"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="dp"/>
            </LinearLayout>
        </LinearLayout>
        <CheckBox
            android:id="@+id/cb_self"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selfRoundCorner"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shape"/>
            <Spinner
                android:id="@+id/sp_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/shape"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backType"/>
                <Spinner
                    android:id="@+id/sp_back_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/backFitType"
                    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scaleType"/>
            <Spinner
                android:id="@+id/sp_scale_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/scaleType"
                />
        </LinearLayout>
        <RadioGroup
            android:id="@+id/rg_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backs"/>
            <RadioButton
                android:id="@+id/rb_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_pic"/>
            <RadioButton
                android:id="@+id/rb_color"
                android:text="@string/radio_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>